--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#milestones">Milestones</a></li>
                         <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#core values">Core Values</a></li>
                         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#core values">Core Values</a></li>
                         <li class="nav-item"><a class="nav-link" href="#join us">Join Us</a></li>
                     </ul>
                 </div>
@@ -147,65 +147,6 @@
                 </div>
             </div>
         </section>
-        <!-- Core Values-->
-        <section class="page-section" id="core values">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Core Values</h2>
-                    <h3 class="section-subheading text-muted"> </h3>
-                </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
         <!-- Portfolio Grid-->
         <section class="page-section bg-light" id="services">
             <div class="container">
@@ -243,6 +184,65 @@
                                 <div class="portfolio-caption-subheading text-muted">Work in Progress</div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Core Values-->
+        <section class="page-section" id="core values">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Core Values</h2>
+                    <h3 class="section-subheading text-muted"> </h3>
+                </div>
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Self-Motivation</h4>
+                        <p class="text-muted">자신과 회사의 성장을 위해서 스스로 의미 있다고 생각하는 문제를 정의하고 해결하기 위해 가능한 모든 방법을 동원해서 최선을 다하는 내적 동기를 가진 분을 찾고 있습니다.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Fast Execution</h4>
+                        <p class="text-muted">오래 고민해서 완벽한 답을 찾아내려고 하는 것 보다 밀도 있게 고민한 후 자신의 가설을 빠른 실행과 시행착오를 통해 검증하고 방향성을 결정하는 분과 함께하고 싶습니다.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Natural Failure</h4>
+                        <p class="text-muted">성장을 위해 경계를 넓혀가는 과정은 당연히 실패를 동반한다는 것을 알기 때문에 이를 전혀 개의치 않고 그 실패를 통해서 결국에는 성장할 수 있다는 믿음을 가진 분과 함께하고 싶습니다.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Complete Honesty</h4>
+                        <p class="text-muted">어떤 상황에서도 자신의 생각을 솔직하게 표현할 수 있는, 예를 들어, 자기 혼자만의 의견이라도 스스로 옳다고 믿으면 나머지 팀원들을 모두 설득하겠다는 각오로 그 의견을 솔직하게 주장할 수 있는 분을 찾고 있습니다.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Pure Rationality</h4>
+                        <p class="text-muted">스스로의 편향과 불완전성을 인정하고 최대한 자신의 감과 직관을 분석하고 설명할 때 생산적인 논의를 통해 더 나은 의사결정이 가능하다고 생각합니다. 팀원과 논의할 때 순수하게 객관적인 데이터와 논리를 이용해서 설득하려고 노력하는 분과 함께하고 싶습니다.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Focus on Fundamental</h4>
+                        <p class="text-muted">본질에 조금이라도 해가 되는 절차와 형식은 과감하게 폐기합니다. 우리 팀의 본질이 무엇인지, 해결하고 싶은 문제의 본질이 무엇인지, 전달하고 싶은 가치의 본질이 무엇인지 끊임없이 고민하는 분과 함께하고 싶습니다.</p>
                     </div>
                 </div>
             </div>
