--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg" alt="..." /></div>
+                        <div class="timeline-image"><i class="fas fa-gavel fa-stack-2x fa-inverse"></i></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4> </h4>
@@ -85,7 +85,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg" alt="..." /></div>
+                        <div class="timeline-image"><i class="fas fa-line-chart fa-stack-2x fa-inverse"></i></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4> </h4>
