--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><i class="fas fa-users fa-stack-2x fa-inverse"></i></div>
+                        <div class="timeline-image"><span class="fa-stack fa-2x"><i class="fas fa-users fa-stack-2x fa-inverse"></i></span></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4> </h4>
@@ -75,7 +75,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><i class="fas fa-gavel fa-stack-2x fa-inverse"></i></div>
+                        <div class="timeline-image"><span class="fa-stack fa-2x"><i class="fas fa-gavel fa-stack-2x fa-inverse"></i></span></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4> </h4>
@@ -85,7 +85,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><i class="fas fa-line-chart fa-stack-2x fa-inverse"></i></div>
+                        <div class="timeline-image"><span class="fa-stack fa-2x"><i class="fas fa-line-chart fa-stack-2x fa-inverse"></i></span></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4> </h4>
