--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h2 class="section-heading text-uppercase">About</h2>
                 </div>
                 <div class="text-left">
-                    <h3 class="section-subheading text-muted">AILIKE.ME는 현재 서울과학고, 서울대 출신들을 주축으로 한 최고의 팀원들로 구성되어 있습니다. 법인 설립 후 두 달 만에 10억원이라는 이례적인 액수의 시드 투자를 유치했고 현재도 빠르고 효율적인 의사소통을 바탕으로 성장해 나가고 있습니다.</h3>
+                    <h3 class="section-subheading text-muted">AILIKE.ME는 <br /><br />AILIKE.ME는 현재 서울과학고, 서울대 출신들을 주축으로 한 최고의 팀원들로 구성되어 있습니다. 법인 설립 후 두 달 만에 10억원이라는 이례적인 액수의 시드 투자를 유치했고 현재도 빠르고 효율적인 의사소통을 바탕으로 성장해 나가고 있습니다.</h3>
                 </div>
             </div>
         </section>
@@ -253,7 +253,9 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Join Us</h2>
-                    <h3 class="section-subheading text-muted"> </h3>
+                </div>
+                <div class="text-left">
+                    <h3 class="section-subheading text-muted">위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.<br /><br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
