--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <h2 class="section-heading text-uppercase">Join Us</h2>
                 </div>
                 <div class="text-left">
-                    <h3 class="section-subheading text-muted">위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.<br /><br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
+                    <h3 class="section-subheading text-muted">위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.<br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
