--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <h3 class="section-subheading text-muted">위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.<br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
                 </div>
                 <div class="text-center">
-                    <a class="btn btn-primary btn-xl text-uppercase" href="mailto:"hrpark@ailike.me>Apply Now</a>
+                    <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hrpark@ailike.me">Apply Now</a>
                 </div>
                 <!-- * * * * * * * * * * * * * * *-->
                 <!-- * * SB Forms Contact Form * *-->
