--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
                     <h3 class="section-subheading text-muted"><b>위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.</b><br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
                 </div>
                 <h4 class="my-3">Requirements</h4>
-                <p class="text_muted">-- AILIKE.ME의 비전에 공감하시는 분<br />-- AILIKE.ME의 비전에 공감하시는 분</p>
+                <p class="text-muted"><ul><li>AILIKE.ME의 비전에 공감하시는 분</li><li>AILIKE.ME의 비전에 공감하시는 분</li></ul></p>
                 <h4 class="my-3">Preferences</h4>
-                <p class="text_muted">-- AILIKE.ME의 비전에 공감하시는 분<br />-- AILIKE.ME의 비전에 공감하시는 분</p>
+                <p class="text-muted">-- AILIKE.ME의 비전에 공감하시는 분<br />-- AILIKE.ME의 비전에 공감하시는 분</p>
                 <div class="text-center">
                     <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hrpark@ailike.me">Apply Now</a>
                 </div>
