--- a/index.html
+++ b/index.html
@@ -258,9 +258,25 @@
                     <h3 class="section-subheading text-muted"><b>위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.</b><br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
                 </div>
                 <h4 class="my-3">Requirements</h4>
-                <ul><li><p class="text-muted">AILIKE.ME의 비전에 공감하시는 분</p></li><li>AILIKE.ME의 비전에 공감하시는 분</li></ul>
+                <ul>
+                    <li>AILIKE.ME의 비전에 공감하시는 분</li>
+                    <li>최대한 자율적인 환경에서 일하고 싶은 분</li>
+                    <li>초기 스타트업 멤버로서 고속성장에 대한 열망을 가지고 계신 분</li>
+                    <li>불확실성을 오히려 가능성으로 보시는 분</li>
+                    <li>세상에 임팩트를 더하고 싶은 분</li>
+                </ul>
                 <h4 class="my-3">Preferences</h4>
-                <p class="text-muted">-- AILIKE.ME의 비전에 공감하시는 분<br />-- AILIKE.ME의 비전에 공감하시는 분</p>
+                <ul>
+                    <li>스타트업 경험</li>
+                    <li>어플, 웹서비스 운영 경험</li>
+                    <li>코딩을 이용한 문제해결 경험</li>
+                    <li>딥러닝, LLM 경험</li>
+                    <li>Figma 등을 이용한 UI/UX 디자인 경험</li>
+                    <li>프론트엔드 개발 경험(Flutter, React Native)</li>
+                    <li>백엔드 개발 경험(Node.js, Django, Spring)</li>
+                    <li>AWS 서버 운영 경험</li>
+                    <li>MLOps 하실 수 있는 분</li>
+                </ul>
                 <div class="text-center">
                     <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hrpark@ailike.me">Apply Now</a>
                 </div>
