--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
                 <div class="text-left">
                     <h3 class="section-subheading text-muted"><b>위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.</b><br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
                 </div>
-                <h4 class="my-3">Requirements</h4>
+                <h4 class="my-3">지원조건</h4>
+                <p><b>Requirements</b></p>
                 <ul>
                     <li>AILIKE.ME의 비전에 공감하시는 분</li>
                     <li>최대한 자율적인 환경에서 일하고 싶은 분</li>
@@ -265,7 +266,8 @@
                     <li>불확실성을 오히려 가능성으로 보시는 분</li>
                     <li>세상에 임팩트를 더하고 싶은 분</li>
                 </ul>
-                <h4 class="my-3">Preferences</h4>
+                
+                <p><b>Preferences</b></p>
                 <ul>
                     <li>스타트업 경험</li>
                     <li>어플, 웹서비스 운영 경험</li>
