--- a/index.html
+++ b/index.html
@@ -272,6 +272,9 @@
                     <li>스타트업 경험</li>
                     <li>어플, 웹서비스 운영 경험</li>
                     <li>코딩을 이용한 문제해결 경험</li>
+                    <li>데이터 기반 의사결정 경험</li>
+                    <li>코딩을 이용한 문제해결 경험</li>
+                    <li>그로스 해킹을 통해 서비스를 성장시킨 경험</li>
                     <li>딥러닝, LLM 경험</li>
                     <li>Figma 등을 이용한 UI/UX 디자인 경험</li>
                     <li>프론트엔드 개발 경험(Flutter, React Native)</li>
@@ -279,6 +282,7 @@
                     <li>AWS 서버 운영 경험</li>
                     <li>MLOps 하실 수 있는 분</li>
                 </ul>
+                <h4 class="my-3">근무 환경</h4>
                 <div class="text-center">
                     <a class="btn btn-primary btn-xl text-uppercase" href="mailto:hrpark@ailike.me">Apply Now</a>
                 </div>
