--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">MILESTONES</h2>
-                    <h3 class="section-subheading text-muted"> </h3>
+                    <h3 class="section-subheading"> </h3>
                 </div>
                 <ul class="timeline">
                     <li>
@@ -114,15 +114,15 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Our Team</h2>
-                    <h3 class="section-subheading text-muted"> </h3>
+                    <h3 class="section-subheading"> </h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/1.png" alt="..." />
                             <h4>Harhim Park</h4>
-                            <p class="text-muted">CEO</p>
-                            <p class="large text-muted">서울과학고<br />서울대 물리학 학사<br />서울대 심리학 석사</p>
+                            <p>CEO</p>
+                            <p class="large">서울과학고<br />서울대 물리학 학사<br />서울대 심리학 석사</p>
                             <p class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></p>
                         </div>
                         <div class="col-lg-4 my-0 mx-auto text-left"></div>
@@ -131,7 +131,7 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <h4>Shin Cho</h4>
-                            <p class="large text-muted">서울과학고<br />서울대 생명과학 학사</p>
+                            <p class="large">서울과학고<br />서울대 생명과학 학사</p>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"></div>
                     </div>
@@ -139,13 +139,13 @@
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/3.png" alt="..." />
                             <h4>Who's Next?</h4>
-                            <p class="large text-muted"></p>
+                            <p class="large"></p>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"></div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted"> </p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large"> </p></div>
                 </div>
             </div>
         </section>
@@ -154,7 +154,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted"> </h3>
+                    <h3 class="section-subheading"> </h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -168,7 +168,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">상담사 심은주</div>
-                                <div class="portfolio-caption-subheading text-muted">카카오톡 챗봇</div>
+                                <div class="portfolio-caption-subheading">카카오톡 챗봇</div>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">GroMind</div>
-                                <div class="portfolio-caption-subheading text-muted">Work in Progress</div>
+                                <div class="portfolio-caption-subheading">Work in Progress</div>
                             </div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Core Values</h2>
-                    <h3 class="section-subheading text-muted"> </h3>
+                    <h3 class="section-subheading"> </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -204,7 +204,7 @@
                             <i class="fas fa-fire fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Self-Motivation</h4>
-                        <p class="text-muted">자신과 회사의 성장을 위해서 스스로 의미 있다고 생각하는 문제를 정의하고 해결하기 위해 가능한 모든 방법을 동원해서 최선을 다하는 내적 동기를 가진 분을 찾고 있습니다.</p>
+                        <p>자신과 회사의 성장을 위해서 스스로 의미 있다고 생각하는 문제를 정의하고 해결하기 위해 가능한 모든 방법을 동원해서 최선을 다하는 내적 동기를 가진 분을 찾고 있습니다.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -212,7 +212,7 @@
                             <i class="fas fa-rocket fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Fast Execution</h4>
-                        <p class="text-muted">오래 고민해서 완벽한 답을 찾아내려고 하는 것 보다 밀도 있게 고민한 후 자신의 가설을 빠른 실행과 시행착오를 통해 검증하고 방향성을 결정하는 분과 함께하고 싶습니다.</p>
+                        <p>오래 고민해서 완벽한 답을 찾아내려고 하는 것 보다 밀도 있게 고민한 후 자신의 가설을 빠른 실행과 시행착오를 통해 검증하고 방향성을 결정하는 분과 함께하고 싶습니다.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -220,7 +220,7 @@
                             <i class="fas fa-tree fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Natural Failure</h4>
-                        <p class="text-muted">성장을 위해 경계를 넓혀가는 과정은 당연히 실패를 동반한다는 것을 알기 때문에 이를 전혀 개의치 않고 그 실패를 통해서 결국에는 성장할 수 있다는 믿음을 가진 분과 함께하고 싶습니다.</p>
+                        <p>성장을 위해 경계를 넓혀가는 과정은 당연히 실패를 동반한다는 것을 알기 때문에 이를 전혀 개의치 않고 그 실패를 통해서 결국에는 성장할 수 있다는 믿음을 가진 분과 함께하고 싶습니다.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -228,7 +228,7 @@
                             <i class="fas fa-heartbeat fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Complete Honesty</h4>
-                        <p class="text-muted">어떤 상황에서도 자신의 생각을 솔직하게 표현할 수 있는, 예를 들어, 자기 혼자만의 의견이라도 스스로 옳다고 믿으면 나머지 팀원들을 모두 설득하겠다는 각오로 그 의견을 솔직하게 주장할 수 있는 분을 찾고 있습니다.</p>
+                        <p>어떤 상황에서도 자신의 생각을 솔직하게 표현할 수 있는, 예를 들어, 자기 혼자만의 의견이라도 스스로 옳다고 믿으면 나머지 팀원들을 모두 설득하겠다는 각오로 그 의견을 솔직하게 주장할 수 있는 분을 찾고 있습니다.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -236,7 +236,7 @@
                             <i class="fas fa-brain fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Pure Rationality</h4>
-                        <p class="text-muted">스스로의 편향과 불완전성을 인정하고 최대한 자신의 감과 직관을 분석하고 설명할 때 생산적인 논의를 통해 더 나은 의사결정이 가능하다고 생각합니다. 팀원과 논의할 때 순수하게 객관적인 데이터와 논리를 이용해서 설득하려고 노력하는 분과 함께하고 싶습니다.</p>
+                        <p>스스로의 편향과 불완전성을 인정하고 최대한 자신의 감과 직관을 분석하고 설명할 때 생산적인 논의를 통해 더 나은 의사결정이 가능하다고 생각합니다. 팀원과 논의할 때 순수하게 객관적인 데이터와 논리를 이용해서 설득하려고 노력하는 분과 함께하고 싶습니다.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -244,7 +244,7 @@
                             <i class="fas fa-gear fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Focus on Fundamental</h4>
-                        <p class="text-muted">본질에 조금이라도 해가 되는 절차와 형식은 과감하게 폐기합니다. 우리 팀의 본질이 무엇인지, 해결하고 싶은 문제의 본질이 무엇인지, 전달하고 싶은 가치의 본질이 무엇인지 끊임없이 고민하는 분과 함께하고 싶습니다.</p>
+                        <p>본질에 조금이라도 해가 되는 절차와 형식은 과감하게 폐기합니다. 우리 팀의 본질이 무엇인지, 해결하고 싶은 문제의 본질이 무엇인지, 전달하고 싶은 가치의 본질이 무엇인지 끊임없이 고민하는 분과 함께하고 싶습니다.</p>
                     </div>
                 </div>
             </div>
@@ -256,7 +256,7 @@
                     <h2 class="section-heading text-uppercase">Join Us</h2>
                 </div>
                 <div class="text-left">
-                    <h3 class="section-subheading text-muted"><b>위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.</b><br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
+                    <h3 class="section-subheading"><b>위의 6가지 핵심 가치를 갖추고 있는 분이라면 현재 기술 스택, 스펙, 경력과 상관없이 AILIKE.ME의 팀원이 될 수 있습니다.</b><br />팀원으로 합류한 이후에는 자율적으로 회사와 자신의 성장에 필요한 다양한 역할을 맡게 됩니다. 지원을 위한 조건은 다음과 같습니다.</h3>
                 </div>
                 <h4 class="my-3">지원 조건</h4>
                 <p><b>필수 조건</b></p>
@@ -286,7 +286,7 @@
                 <br />
                 
                 <div class="text-left">
-                    <h3 class="section-subheading text-muted"><b>AILIKE.ME의 팀원에게는 최대한의 자율성을 보장합니다. 업무의 효율성을 높일 수 있다면 모든 것이 가능합니다.</b><br />팀원으로 합류하신 이후에 건의와 팀 논의를 거쳐서 새로운 팀문화를 함께 만들어 나가는 것도 좋습니다.</h3>
+                    <h3 class="section-subheading"><b>AILIKE.ME의 팀원에게는 최대한의 자율성을 보장합니다. 업무의 효율성을 높일 수 있다면 모든 것이 가능합니다.</b><br />팀원으로 합류하신 이후에 건의와 팀 논의를 거쳐서 새로운 팀문화를 함께 만들어 나가는 것도 좋습니다.</h3>
                 </div>
                 <h4 class="my-3">근무 환경</h4>
                 <ul>
