--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
                 <h4 class="my-3">지원 조건</h4>
                 <p><b>필수 조건</b></p>
                 <ul>
-                    <li>AILIKE.ME의 비전에 공감하시는 분</li>
-                    <li>최대한 자율적인 환경에서 일하고 싶은 분</li>
-                    <li>초기 스타트업 멤버로서 고속성장에 대한 열망을 가지고 계신 분</li>
-                    <li>불확실성을 오히려 가능성으로 보시는 분</li>
-                    <li>세상에 임팩트를 더하고 싶은 분</li>
+                    <li class="section-subheading">AILIKE.ME의 비전에 공감하시는 분</li>
+                    <li class="section-subheading">최대한 자율적인 환경에서 일하고 싶은 분</li>
+                    <li class="section-subheading">초기 스타트업 멤버로서 고속성장에 대한 열망을 가지고 계신 분</li>
+                    <li class="section-subheading">불확실성을 오히려 가능성으로 보시는 분</li>
+                    <li class="section-subheading">세상에 임팩트를 더하고 싶은 분</li>
                 </ul>
                 
                 <p><b>우대 조건</b></p>
