--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.png" alt="..." />
                             <h4>Shin Cho</h4>
                             <p>.</p>
-                            <p class="large">서울과학고<br />서울대 생명과학 학사<br /></p>
+                            <p class="large">서울과학고<br />서울대 생명과학 학사<br />.</p>
                             <p class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/harhim-park-86667a28b/" aria-label="Harhim Park LinkedIn Profile"><i class="fab fa-linkedin-in"></i></p>
                         </div>
                         <div class="col-lg-4 mx-auto text-left"></div>
