--- a/index.html
+++ b/index.html
@@ -163,9 +163,8 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" href="http://pf.kakao.com/_mndVG/friend">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid rounded-circle" src="assets/img/portfolio/1.png" alt="..." />
+                                <img class="rounded-circle img-fluid" src="assets/img/portfolio/1.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">상담사 심은주</div>
@@ -178,9 +177,8 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#!">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid rounded-circle" src="assets/img/portfolio/2.png" alt="..." />
+                                <img class="rounded-circle img-fluid" src="assets/img/portfolio/2.png" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">GroMind</div>
